@@ -25,6 +25,27 @@
   <dependencies>
     <dependency>
       <groupId>org.springframework</groupId>
+      <artifactId>org.springframework.asm</artifactId>
+      <scope>provided</scope>
+      <version>${spring.maven.artifact.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.antlr</groupId>
+      <artifactId>com.springsource.org.antlr</artifactId>
+      <scope>provided</scope>
+      <version>3.0.1</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>org.springframework.expression</artifactId>
+      <scope>provided</scope>
+      <version>${spring.maven.artifact.version}</version>
+    </dependency>
+	
+    <dependency>
+      <groupId>org.springframework</groupId>
       <artifactId>org.springframework.core</artifactId>
       <scope>provided</scope>      
     </dependency>
